@@ -179,3 +179,6 @@ frecuencias muy altas.
 
 
 -ZSF: soporte para TS2068, Sam coupe, Chloe, Prism, Chrome, MK14
+
+-tecla en debug para ir al siguiente/anterior breakpoint en orden
+-tecla para cambiar PC con direccion apuntada por Pointer
