@@ -488,6 +488,8 @@ extern void cpu_history_get_pc_register_element(int indice,char *string_destino)
 extern int remote_tamanyo_archivo_raw_source_code;
 extern int *remote_parsed_source_code_indexes_pointer;
 extern char *remote_raw_source_code_pointer;
+extern char last_source_code_file[];
+extern void load_source_code_eject(void);
 
 extern int remote_disassemble_find_label(unsigned int direccion);
 extern int remote_find_label_source_code(char *label_to_find);
