@@ -3713,6 +3713,7 @@ int util_write_configfile(void)
   if (menu_debug_registers_if_showscan.v)     ADD_STRING_CONFIG,"--show-electron-debug");
  
 
+  if (remote_tamanyo_archivo_raw_source_code) ADD_STRING_CONFIG,"--load-source-code %s",last_source_code_file);
 
 
   for (i=0;i<MAX_BREAKPOINTS_CONDITIONS;i++) {
